[package]
name = "app3"
version = "0.1.0"
authors = ["Mohammed Alyousef <may642_2000@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "0.7.14", features = ["fltk-bundled"] }
serde = { version = "1.0", features = ["derive"]}
reqwest = { version = "0.10", features = ["json"]}
tokio = { version = "0.2", features = ["full"]}
