[workspace]

resolver = "2"
members = [
    "cairo",
    "cairo_shadow_button",
    "calculator",
    "calendar",
    "csv",
    "egui",
    "femtovg",
    "ffmpeg",
    "fldialect",
    "flmusic",
    "flhudson",
    "picture",
    "resters",
    "fltext",
    "framebuffer",
    "glium",
    "glow",
    "glut",
    "glyphmap",
    "gst",
    "image",
    "inner",
    "libmpv",
    "libvlc",
    "mpv",
    "musicplayer",
    "opengl",
    "pixels",
    "plotters",
    "raqote",
    "rounded-svg",
    "speedy2d",
    "systray",
    "terminal",
    "tinyskia",
    "web-todo",
    "web-todo2",
    "webview",
    "wgpu",
    "xterm",
]

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
