[package]
authors = ["Mohammed Alyousef <may642_2000@hotmail.com>"]
name = "cairo_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["cairoext"] }
cairo-rs = "^0.19"
