[package]
homepage = "https://github.com/fltk-rs"
authors = ["Artem V. Ageev"]
name = "flcalculator"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["use-ninja"] }
serde = { version="1.0", features = ["derive"] }
rmp-serde = { version="1.1" }
