[package]
authors = ["MoAlyousef <may642_2000@hotmail.com>"]
name = "csv_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["use-ninja"] }
csv = "^1.3"
serde = { version = "^1.0", features = ["derive"] }
lazy_static = "^1.4"
image = { version = "^0.25", default-features = false, features = ["jpeg"] }
fltk-theme = { version="^0.7" }
