[package]
homepage = "https://github.com/fltk-rs"
authors = ["Artem V. Ageev"]
name = "fldialect"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["use-ninja"] }
fltk-theme = { version="0.7" }
rmp-serde = { version="1.1" }
serde = { version="1.0", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.9", features = ["json"] }
