[package]
name = "ffmpeg"
version = "0.1.0"
authors = ["MoAlyousef <may642_2000@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["use-ninja"] }
signal-hook = "0.3"
lazy_static = "1.4"
