[package]
homepage = "https://github.com/fltk-rs"
authors = "Artem V. Ageev"
name = "fldialect"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4" }
fltk-theme = { version="0.7" }
