[package]
name = "rshudson"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { version = "1.1" }
xlsxwriter = { version = "0.6" }
serde = { version="1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-xml-rs = { version="0.5"  }
serde_yaml   = { version = "0.9" }
fltk = { version = "^1.4", features = ["use-ninja"] }
fltk-theme = { version="^0.7" }
