[package]
name = "flmusic"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["use-ninja"] }
fltk-theme = { version="0.7" }
soloud = { version="^1.0" }
serde = { version="1.0", features = ["derive"] }
rmp-serde = { version="^1.1" }
glib = "0.18"
