[package]
name = "fltext"
version = "0.1.0"
edition = "2021"

[dependencies]
fltk = "^1.4"
fltk-theme = "0.7"
regex = "1.9.6"
notify = "5.1"
# optional deps
# term
fltk-term = { version = "0.1", optional = true }
# highlight
tree-sitter-highlight = { version = "0.20", optional = true }
tree-sitter-rust = { version = "0.20", optional = true }
tree-sitter-toml = { version = "0.20", optional = true }
tree-sitter-md = { version = "0.1", optional = true }

[features]
default = ["highlight", "term"]
highlight = [
    "tree-sitter-highlight", 
    "tree-sitter-rust", 
    "tree-sitter-toml", 
    "tree-sitter-md",
    ]
term = [
    "fltk-term"
]
