[package]
name = "glium_demo"
version = "0.1.0"
authors = ["Mohammed Alyousef <may642_2000@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { version = "0.29", default-features = false } # no need for glutin
fltk = { version = "^1.4", features = ["enable-glwindow"] }
