[package]
name = "glut"
version = "0.1.0"
authors = ["Mohammed Alyousef <may642_2000@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14"
fltk = { version = "0.14.8", features = ["enable-glwindow"] }
