[package]
name = "image_demo"
version = "0.1.0"
authors = ["MoAlyousef <may642_2000@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["use-ninja"] }
image = "0.24"
rust-embed = "6.6.1"
