[package]
name = "libmpv_demo"
version = "0.1.0"
authors = ["Mohammed Alyousef <may642_2000@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = {version = "^1.4", features=["use-ninja", "enable-glwindow", "no-pango"]}
libmpv = { git = "https://github.com/anlumo/libmpv-rs" }
