[package]
name = "vlc-fltk"
version = "0.1.0"
authors = ["MoAlyousef <may642_2000@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "0.13.9"
vlc-rs = { git = "https://github.com/garkimasera/vlc-rs.git" }
