[package]
name = "gltriangle"
version = "0.1.0"
authors = ["MoAlyousef <may642_2000@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "0.13.13", features = ["enable-glwindow"] }
glu-sys = "0.1.4"

