[package]
name = "pixels"
version = "0.1.0"
authors = ["Mohammed Alyousef <may642_2000@hotmail.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "1", features = ["rwh05"] }
pixels = "0.13"
