[package]
name = "tinyskia"
version = "0.1.0"
authors = ["Mohammed Alyousef <may642_2000@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "0.14"
tiny-skia = { version = "0.4", git = "https://github.com/RazrFalcon/tiny-skia" }