[package]
name = "web-todo2"
version = "0.1.0"
authors = ["Mohammed Alyousef <may642_2000@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1"
serde = { version = "1.0", features = ["derive"] }
surf = { version = "2.1.0" }
async-std = { version = "1.9", features = ["attributes"] }
